edit some dark mode hover, fix some hover bug, and add the miss link on contact me (mobile version)

--- a/styles/build.css
+++ b/styles/build.css
@@ -652,7 +652,7 @@ video {
 
 * 
     {
-  transition: color .5s, background-color .5s, opacity .3s;
+  transition: color .5s, background-color .5s, opacity .5s;
   font-family: 'Poppins', sans-serif;
 }
 
@@ -719,10 +719,6 @@ html
 
 .mt-5 {
   margin-top: 1.25rem;
-}
-
-.mb-8 {
-  margin-bottom: 2rem;
 }
 
 .mt-8 {
@@ -982,11 +978,6 @@ html
   line-height: 1.75rem;
 }
 
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
-}
-
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
@@ -1039,16 +1030,17 @@ html
   transition-duration: 150ms;
 }
 
-.duration-500 {
-  transition-duration: 500ms;
-}
-
 .duration-300 {
   transition-duration: 300ms;
 }
 
-.hover\:opacity-75:hover {
-  opacity: 0.75;
+.duration-500 {
+  transition-duration: 500ms;
+}
+
+.hover\:text-my-gray:hover {
+  --tw-text-opacity: 1;
+  color: rgba(83, 83, 83, var(--tw-text-opacity));
 }
 
 .hover\:opacity-50:hover {
@@ -1077,6 +1069,11 @@ html
 .dark .dark\:text-my-white {
   --tw-text-opacity: 1;
   color: rgba(255, 255, 255, var(--tw-text-opacity));
+}
+
+.dark .dark\:hover\:text-my-orange:hover {
+  --tw-text-opacity: 1;
+  color: rgba(255, 199, 0, var(--tw-text-opacity));
 }
 
 @media (min-width: 768px) {
