--- a/styles/source.css
+++ b/styles/source.css
@@ -8,7 +8,7 @@
 
     * 
     {
-        transition: color .5s, background-color .5s, opacity .3s;
+        transition: color .5s, background-color .5s, opacity .5s;
         font-family: 'Poppins', sans-serif;
     }
 
